added smoke test for stock monitor